# bazaar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: ma_crossover_strategy.rs
src/: asset.rs  candle.rs  exchange.rs  lib.rs  market.rs  order.rs  wallet.rs
src/apis/: forward_fill.rs  ftx.rs  mock.rs  mod.rs  monitor.rs  simulate.rs  store.rs
src/exchange/: bundle.rs  mod.rs  position.rs  valuation.rs  valued_bundle.rs
src/strategies/: levels.rs  mod.rs  monitor.rs  strategy.rs
