[package]
name = "bazaar"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.19.0", features = ["serde"] }
rust_decimal_macros = "1.19.0"
async-trait = "0.1.52"
futures-util = "0.3.19"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "decimal", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
log = "0.4.14"
once_cell = "1.9.0"
tokio = { version = "1.15.0", features = ["time"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.133", features = ["derive"], optional = true }
serde_json = { version = "1.0.74", optional = true }
ftx = { version = "0.5.0", optional = true }
#binance = { git = "https://github.com/wisespace-io/binance-rs.git", optional = true }
fxhash = "0.2.1"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt"] }
simple_logger = "2.0"
rust_decimal_macros = "1.19"
rolling_norm = { version = "0.3.0" }
rand = "0.8"

[features]
default = ["ftx", "monitor", "backtest"]
monitor = ["serde", "serde_json"]
backtest = []
